Add data archives via Git LFS for CORD-19 indexing system:
Data files (tracked via Git LFS):
- barrels.zip: Contains barrel frequency distributions
- compressed_barrels.zip: Compressed barrel representations
- indexes.zip: Search indexes, lexicons, and metadata

Note: These .zip files are tracked by Git LFS for efficient storage
and versioning of large binary data.

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,25 @@
-﻿# Data directories - DO NOT COMMIT
+# Raw data directories - IGNORE
 barrels/
 compressed_barrels/
 indexes/
+
+# Git LFS handles these archive formats
+# DO NOT ignore these - Git LFS tracks them:
+# *.zip  <-- Tracked by LFS, so DON'T add this line!
+# *.7z   <-- Tracked by LFS, so DON'T add this line!
+# *.pkl  <-- Tracked by LFS, so DON'T add this line!
 
 # Python cache
 __pycache__/
 *.pyc
 *.pyo
-*.pyd
 
-# Data files
-*.json
-*.pkl
-*.pickle
-*.h5
-*.hdf5
-
-# Archives
-*.zip
-*.7z
-*.gz
-*.tar
+# Virtual environments
+scispacy_64bit/
+scispacy_env/
+scispacy_final/
+env/
+venv/
 
 # OS files
 .DS_Store
@@ -29,5 +28,3 @@ Thumbs.db
 # IDE
 .vscode/
 .idea/
-*.swp
-*.swo
