--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 * text=auto
 *.7z filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+data/*.zip filter=lfs diff=lfs merge=lfs -text
+data/*.7z filter=lfs diff=lfs merge=lfs -text
+data/*.pkl filter=lfs diff=lfs merge=lfs -text
