--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 barrels/
 compressed_barrels/
 indexes/
+data/
 
 # Data folder contains Git LFS tracked archives
 # data/*.zip  <-- Tracked by Git LFS
